tests/assert2.dora
// error: 101

fn main() {
  let a = false;
  assert(a);
}
